python/testData/highlighting/malformedStringUnterminated.py
# missing last quote, plain
a = 1 # to make the text below non-doc
<error descr="Missing closing quote [']">'abc</error>
